Fix: image stretched in the page of details

--- a/components/IssueDetail/IssueDetail.module.scss
+++ b/components/IssueDetail/IssueDetail.module.scss
@@ -3,6 +3,7 @@
 .detailIssue {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
 
   @media screen and (max-width: 768px) {
     flex-direction: column;
@@ -46,7 +47,6 @@
 }
 
 .backHome {
-  
   border: 1px solid $textAccent;
   border-radius: 5px;
   display: table;
